--- a/taquistore/src/main/resources/templates/fragments/cuadros-productos.html
+++ b/taquistore/src/main/resources/templates/fragments/cuadros-productos.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div th:fragment = "fragmento-productos">       
-            <h3>Tabla de productos</h3>
+        <!-- TABLA DE PRODUCTOS -->
+        <div th:fragment = "fragmento-productos">
             <table border="1">
                 <thead>
                     <tr>
