--- a/taquistore/src/main/resources/templates/fragments/filtros-busqueda.html
+++ b/taquistore/src/main/resources/templates/fragments/filtros-busqueda.html
@@ -6,6 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        
+        <div th:fragment = "fragmento-categoria">
+            <h3>Categoria</h3>
+            <label>
+                <input type="radio" name="p-categoria" value="">
+                <span>Todos</span>
+            </label>
+
+            <div th:each="categoria : ${categorias}">  
+                <label>
+                    <input type="radio" name="p-categoria" th:value="${categoria.id_categoria}">
+                    <span th:text="${categoria.nombre}"></span>
+                </label>
+            </div>
+        </div>
+
+        
         <div th:fragment = "fragmento-marca">
             <h3>Marca</h3>
             <div th:each="marca : ${marcas}">
@@ -15,17 +32,8 @@
                 </label>
             </div>
         </div>
-        
-        <div th:fragment = "fragmento-categoria">
-            <h3>Categoria</h3>
-            <div th:each="categoria : ${categorias}">          
-                <label>
-                    <input type="radio" name="p-categoria" th:value="${categoria.id_categoria}">
-                    <span th:text="${categoria.nombre}"></span>
-                </label>
-            </div>
-        </div>
-        
+
+
         <div th:fragment = "fragmento-precio">
             <h3>Precio</h3>
             <div>
@@ -46,8 +54,8 @@
                     <span>Oferta</span>
                 </label>
             </div>
-            
+
         </div>
-        
+
     </body>
 </html>
