--- a/taquistore/src/main/resources/templates/index.html
+++ b/taquistore/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>Inicio | Taqui Store</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link th:href="@{/style.css}" rel="stylesheet">
     </head>
     <body>
-        <h1>BIENVENIDOS</h1>
-        
-        <h2>Barra de menu</h2>
         <!-- INSERTAR LA PLANTILLA DE LA BARRA DE MENÚ -->
         <div th:insert="fragments/cabecera-pie :: fragmento-cabecera"></div>
-
+        <h1>
+            (((Súper precios en tus artículos favoritos)))
+        </h1>
     </body>
 </html>
