--- a/taquistore/src/main/resources/templates/listaproductosoferta.html
+++ b/taquistore/src/main/resources/templates/listaproductosoferta.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>Oferta | Taqui Store</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Todos los productos</h1>
-
-        <!-- UBICACIÓN Y NOMBRE DEL DOCUMENTO HTML :: NOMBRE DEL FRAGMENTO -->        
-        <h2>Barra de menu</h2>
-        <!-- INSERTAR LA PLANTILLA DE LA BARRA DE MENÚ -->
         <div th:insert="fragments/cabecera-pie :: fragmento-cabecera"></div>
-
-        <h3>Filtros</h3>
-        <form th:action="@{/productos}" method="GET">
-            <!-- MENU DE FILTROS -->
-            <!-- INSERTAR LA PLANTILLA DEL FILTRO POR CATEGORIA -->
+        <div th:insert="fragments/cabecera-pie :: fragmento-categorias"></div>
+        <h1>Oferta</h1>
+        <form th:action="@{/productos/oferta}" autocomplete="off" method="GET">
+            <h2>Filtrar por</h2>
+            
+            
             <div th:insert="fragments/filtros-busqueda :: fragmento-categoria"></div>
-            <!-- INSERTAR LA PLANTILLA DEL FILTRO POR MARCA -->
             <div th:insert="fragments/filtros-busqueda :: fragmento-marca"></div>
             <div th:insert="fragments/filtros-busqueda :: fragmento-precio"></div>
-            <div th:insert="fragments/filtros-busqueda :: fragmento-oferta"></div>
 
             <input type="submit" value="Filtrar">
-        </form>    
+
+        </form>
         <div>
             <div th:insert="fragments/cuadros-productos :: fragmento-productos"></div>
         </div>
