--- a/taquistore/src/main/resources/templates/listaproductosoferta.html
+++ b/taquistore/src/main/resources/templates/listaproductosoferta.html
@@ -4,10 +4,11 @@
         <title>Oferta | Taqui Store</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link th:href="@{/style.css}" rel="stylesheet">
+
     </head>
     <body>
         <div th:insert="fragments/cabecera-pie :: fragmento-cabecera"></div>
-        <div th:insert="fragments/cabecera-pie :: fragmento-categorias"></div>
         <h1>Oferta</h1>
         <form th:action="@{/productos/oferta}" autocomplete="off" method="GET">
             <h2>Filtrar por</h2>
