--- a/taquistore/src/main/resources/templates/listaproductosbusqueda.html
+++ b/taquistore/src/main/resources/templates/listaproductosbusqueda.html
@@ -4,10 +4,11 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link th:href="@{/style.css}" rel="stylesheet">
+
     </head>
     <body>
         <div th:insert="fragments/cabecera-pie :: fragmento-cabecera"></div>
-        <div th:insert="fragments/cabecera-pie :: fragmento-categorias"></div>
 
         <h1>Resultados de busqueda</h1>
         <!-- -->
